// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTableComponent renders 1`] = `
<mock-render>
  <app-simple-table
    style="display: flex; flex-direction: column;"
  >
  </app-simple-table>
</mock-render>
`;

exports[`SimpleTableComponent with data renders 1`] = `
<mock-render>
  <app-simple-table
    ng-reflect-data="[object Object],[object Object"
    style="display: flex; flex-direction: column;"
  >
  </app-simple-table>
</mock-render>
`;
